--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "power-assert": "^1.4.1",
     "react-addons-test-utils": "^15.4.1",
     "redux-api": "^0.9.16",
+    "redux-logger": "^3.0.1",
     "redux-mock-store": "^1.2.1",
     "rewire": "^2.5.2",
     "webpack": "^1.14.0"
