--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
+    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.1.0",
     "sinon": "^1.17.7",
     "urijs": "^1.18.5"
