--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache: yarn
 script:
     - make travis
     - cd ./client/ && make
-    - cd ./client/ && make test
+    - make test
 
 git:
     submodules: false
