--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ node_js:
     - "6.9.1"
 before_install:
     - "curl -L https://raw.githubusercontent.com/arunoda/travis-ci-meteor-packages/master/configure.sh | /bin/sh"
+
+install:
+    - yarn global add codecov
+
 before_script:
+    - yarn
     - "export PATH=$HOME/.meteor:$PATH"
 
 cache: yarn
