--- a/.env.travis
+++ b/.env.travis
@@ -1,3 +1,3 @@
-DATABASE_URL=mysql://root@localhost/football_matome
-TEST_DATABASE_URL=mysql://root@localhost/test_football_matome
+DATABASE_URL=mysql://root@127.0.0.1/football_matome
+TEST_DATABASE_URL=mysql://root@127.0.0.1/test_football_matome
 API_PORT=
