--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ rust:
 
 before_script:
     - "export PATH=$HOME/.meteor:$PATH"
+    - mysql -e 'CREATE DATABASE test_football_matome;'
+
+services:
+    - mysql
 
 cache: yarn
 
