--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ rust:
 
 before_script:
     - "export PATH=$HOME/.meteor:$PATH"
-    - mysql -e 'CREATE DATABASE football_matome;'
     - mysql -e 'CREATE DATABASE test_football_matome;'
     - nvm install 6
     - nvm use 6
     - npm install -g yarn
+    - cargo install diesel_cli
+    - make migrate
 
 services:
     - mysql
