--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,18 @@ language: rust
 rust:
     - stable
 
-dist: trusty
-sudo: required
-addons:
-    apt:
-        packages:
-            - mysql-server-5.6
-            - mysql-client-core-5.6
-            - mysql-client-5.6
-
 before_script:
     - "export PATH=$HOME/.meteor:$PATH"
     # node update
     - nvm install 6
     - nvm use 6
     - npm install -g yarn
+    - sudo apt-get remove --purge mysql-common mysql-server-5.5 mysql-server-core-5.5 mysql-client-5.5 mysql-client-core-5.5
+    - sudo apt-get autoremove
+    - sudo apt-get autoclean
+    - sudo apt-add-repository ppa:ondrej/mysql-5.6 -y
+    - sudo apt-get update
+    - sudo apt-get install mysql-common mysql-server-5.6 mysql-client-5.6
     # install cargo env dependency
     - cargo install diesel_cli
     # create database
