--- a/client/package.json
+++ b/client/package.json
@@ -43,8 +43,7 @@
     "redux-logger": "^3.0.1",
     "redux-mock-store": "^1.2.1",
     "rewire": "^2.5.2",
-    "webpack": "^1.14.0",
-    "window-mock": "0.0.13"
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "ajv": "^4.10.0",
