--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ authors = ["Tomy <kazu9su@gmail.com>"]
 toml = "0.4.*"
 serde = "1.*"
 serde_derive = "1.*"
-hyper = "*"
+hyper = "0.10.9"
 hyper-native-tls = "*"
-xml-rs = "*"
+xml-rs = "0.4.1"
 diesel = { version = "0.11.0", features = ["chrono"] }
 diesel_codegen = { version = "0.11.0", features = ["mysql"] }
 dotenv = "0.8.0"
 nickel = "*"
 rustc-serialize = "*"
-chrono = "*"
+chrono = "0.3.0"
 lazy_static = "*"
 clippy = {version = "*", optional = true}
 mockito = "*"
